services/files/front/components/chat-room-message/chat-room-message.css
#message-container {
    display: grid;
    grid-template: 1.5em 1.5em 1fr / 60px 1fr;
    gap: 0 10px;
    align-items: baseline;

    border-radius: 10px;
    padding: 5px 15px;

    &.you {
        background: #2F2853;
        margin-left: 25px;
    }

    &:not(.you) {
        background: #4a2853;
        margin-right: 25px;
    }
}

#sender-avatar {
    max-width: 100%;
    grid-row: 1 / span 3;
}

h3, small, p {
    margin: 0;
}

#sender-name {
    grid-column: 2;
    grid-row: 1;
}

#message-date {
    grid-column: 2;
    grid-row: 2;
    font-size: .75em;
}

#message-content {
    grid-column: 2;
    grid-row: 3;
    word-break: break-word;
    white-space: pre-line;
}

